<resources>
    <string name="app_name">VPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="cover">cover</string>
    <string name="action_open_file">打开...</string>
    <string name="action_open">打开种子</string>
    <string name="action_magnet">磁力链接</string>
    <string name="action_RN">在线资源</string>
    <string name="action_analysis">解析</string>
    <string name="back_home_tip">再按一次返回桌面</string>
    <string name="file_name">文件名</string>
    <string name="total_size">文件大小</string>
    <string name="download_size">已下载</string>
    <string name="download_speed">下载速度:</string>
    <string name="percent">100%</string>
    <string name="download_status">任务状态</string>
    <string name="play_speed">播放速度</string>
    <string name="speed_0_5">0.5</string>
    <string name="speed_normal">正常</string>
    <string name="speed_1_5">1.5</string>
    <string name="speed_2">2.0</string>
    <string name="speed_2_5">2.5</string>
    <string name="view_scale">画面尺寸</string>
    <string name="view_fit">自适应</string>
    <string name="view_fit_with_width">宽度</string>
    <string name="view_fit_fill">拉伸</string>
    <string name="view_fit_zoom">裁剪</string>
    <string name="view_default">默认</string>
    <string name="back_to_root">根目录</string>
    <string name="sort_by_name_asc">按文件名排序(升序)</string>
    <string name="sort_by_name_desc">按文件名排序(降序)</string>
    <string name="sort_by_modify_time_asc">按时间排序(升序)</string>
    <string name="sort_by_modify_time_desc">按时间排序(降序)</string>
</resources>
