<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/name_line"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/file_name"
            android:maxLines="2"
            android:ellipsize="end"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/info_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_line"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/totalSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/" />

                <TextView
                    android:id="@+id/downloadSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/download_speed" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_speed" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percent"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/percent"/>

            <ImageButton
                android:id="@+id/down_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_download_1"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:background="#00000000"/>

            <ImageButton
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pause"
                android:background="#00000000"/>

            <!--<ImageButton-->
                <!--android:id="@+id/delete"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_delete"-->
                <!--android:background="#00000000"/>-->

            <!--<ImageButton-->
                <!--android:id="@+id/play"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_play"-->
                <!--android:background="#00000000"/>-->


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/progress_line"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/info_line">

        <ProgressBar
            android:id="@+id/down_progress"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="bottom"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/progress_bg"
            android:max="100"
            android:progress="90"/>

    </LinearLayout>


</RelativeLayout>